<resources>
    <string name="application_back">实际情况iPhone只有Home键</string>
    <string name="app_new">新机体验</string>
    <string name="app_content">内容体验</string>
    <string name="app_startcontent">点击这里内容体验</string>
    <string name="message_content1">如果本app对你有帮助</string>
    <string name="message_content2">可以加我新浪微博</string>
    <string name="message_content3">微博名称</string>
    <string name="message_content4">App设计师</string>
    <string name="message_time1">昨天</string>
    <string name="message_time2">星期一</string>
    <string name="app_shortcut">IOS快捷键</string>
    <string name="app_name">iPhone助手</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_phone">电话</string>
    <string name="app_mail">邮件</string>
    <string name="app_safari">Safari</string>
    <string name="app_Music">音乐</string>
    <string name="app_messages">信息</string>
    <string name="app_calendar">日历</string>
    <string name="app_photos">照片</string>
    <string name="app_camera">相机</string>
    <string name="app_weather">天气</string>
    <string name="app_clock">时钟</string>
    <string name="app_maps">地图</string>
    <string name="app_videos">视频</string>
    <string name="app_notes">备忘录</string>
    <string name="app_reminders">提醒事项</string>
    <string name="app_stocks">股市</string>
    <string name="app_gamecenter">Game Center</string>
    <string name="app_newsstand">报刊杂志</string>
    <string name="app_itunestore">iTunes Store</string>
    <string name="app_appstore">App Store</string>
    <string name="app_ibooks">iBooks</string>
    <string name="app_health">健康</string>
    <string name="app_passbook">Wallet</string>
    <string name="app_settings">设置</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="title_activity_calender">CalenderActivity</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="yes_dialog">好</string>
    <string name="no_dialog">取消</string>
    <string name="login_title_dialog">登陆iTunes Store</string>
    <string name="login_content_dialog">会要求输入“你的appId账号”账户的Apple ID密码,正确后会自动安装</string>
    <string-array name="values">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_time">TimeActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_game_center">GameCenterActivity</string>
    <string name="title_activity_calendar_rili">CalendarRiliActivity</string>
        <string name="image_cant_toast">图片显示，无法点击</string>
    <string name="message_left_toast">点击后可以删除信息，以及标记为已读</string>
    <string name="message_right_toast">弹出一个界面，新建信息</string>
    <string name="calendarnext_edit_toast">编辑日历</string>
    <string name="calendar_add_toast">弹出一个界面，新建事件，将会标注在日历上，提醒你的行程（可以包含你想要邀请的人）</string>
    <string name="calendar_search_toast">弹出一个窗口，搜索你所创建的事件</string>
    <string name="calendar_toady_toast">第一次点击精确到日，第二次点击精确到时（事件将会标注在此界面）</string>
    <string name="calendar_recevie_toast">弹出一个界面，显示提到你的事件，可以在此回复</string>
    <string name="map_rightturn_toast">弹出一个界面，可以输入你想去的地方，然后会在地图中显示当前位置去你输入地点的路线图</string>
    <string name="map_share_toast">可以共享你的位置</string>
    <string name="map_location_toast">定位到你的位置，并在地图上用蓝色的圆点直接显示你的位置</string>
    <string name="map_search_toast">输入你需要的地址，然后可以导航</string>
    <string name="time_add0_toast">弹出一个列出所有国家的界面，可以添加任意国家的时区</string>
    <string name="time_add1_toast">弹出一个添加闹钟的界面，可以选择闹钟的铃声，响铃方式，名称</string>
    <string name="time_edit0_toast">所选的时区变得可以删除</string>
    <string name="time_edit1_toast">增加的闹钟变得可以删除</string>
    <string name="photo_search1_toast">搜索相册</string>
    <string name="photo_center1_toast">点击后逐渐展开照片</string>
        <string name="photo_add3_toast">添加相簿</string>
        <string name="photo_search3_toast">按照拍摄地点或日期搜索相片</string>
          <string name="photo_edit3_toast">可以删除自定义的相簿</string>
    <string name="camera_flash_toast">调整闪光灯，有自动，关闭和打开三个选项</string>
    <string name="camera_countdown_toast">延迟拍摄选项，有关闭，3秒和10秒三个选项，后两个选项会在到时间后连拍10张左右照片</string>
    <string name="camera_flip_toast">调整摄像头，自拍和拍别人（全景和慢动作不能自拍）</string>
    <string name="camera_take_toast">快门，按一下拍摄</string>
    <string name="camera_case_toast">点击后会到你的相册</string>
    <string name="camera_style_toast">会使画面呈现在九种不同风格</string>
    <string name="camera_hdr_toast">高动态范围图像（High-Dynamic Range，简称HDR），相比普通的图像，可以提供更多的动态范围和图像细节，根据不同的曝光时间的LDR(Low-Dynamic Range)图像，利用每个曝光时间相对应最佳细节的LDR图像来合成最终HDR图像，能够更好的反映出真实环境中的视觉效果</string>
    <string name="camera_center_toast">点击图像，摄像头会根据你选择的地点聚焦</string>
    <string name="camera_lapse_toast">一组照片或是视频，后期通过照片串联或是视频抽帧，把几分钟、几小时甚至是几天几年的过程压缩在一个较短的时间内以视频的方式播放。在一段延时摄影视频中，物体或者景物缓慢变化的过程被压缩到一个较短的时间内，呈现出平时用肉眼无法察觉的奇异精彩的景象。</string>
    <string name="camera_slow_toast">将你拍的视屏变慢播放，比如5秒的视屏会变成感觉30秒的样子(开始和结尾并不会变慢)</string>
    <string name="camera_video_toast">普通的视屏</string>
    <string name="camera_photo_toast">照片，iphone6s的照片添加了Live选项，可以让照片动起来（很cool）</string>
    <string name="camera_square_toast">正方形的照片</string>
    <string name="camera_all_toast">全景照片，点击一下拍照键，然后按着箭头水平移动即可，画面质量和你手抖的程度成反比</string>
    <string name="weather_left_toast">将会打开safari浏览器,进入weather.com</string>
    <string name="weather_right_toast">弹出一个界面，将已经添加的天气用列表显示出来，在这里可以添加新地点的天气,默认会有你在的地点和北京上海</string>
    <string name="share_add_toast">弹出一个界面，添加你想加的股市,名称全英文</string>
    <string name="share_yahoo_toast">打开safari浏览器,进入yahoo.com</string>
    <string name="appstore_get_toast">先要获取一下才能安装，不知道苹果为什么会多这一步，估计是怕你点错了</string>
    <string name="appstore_open_toast">将会打开应用，桌面上也会出现微信图标</string>
    <string name="appstore_lanuch_toast">安装按钮会变成一个圈转完了就安装结束了，在这期间你可以退出此界面做其他事情,按钮会变成打开</string>
    <string name="appstore_bottom_toast">下面是用图片代替的，别点了，点了也没用</string>
    <string name="appstore_menu_toast">打开你的欲购清单</string>
    <string name="appstore_favorite_toast">App的排行榜，有付费，免费，畅销排行，购买付费app会要求往你的AppleID充钱，用银行卡充的时候，会打电话给你号码是020 96585（不是诈骗电话，需要在电话中输入银行卡密码）</string>
    <string name="appstore_search_toast">搜索App，刚买的话在这里搜索微信，微博什么的</string>
    <string name="appstore_safari_toast">会显示附近热门的App，以及各种类别</string>
    <string name="appstore_update_toast">显示你的app在什么时候更新的，默认是自动更新，可以在设置里更改，有时候旧版比新版更好</string>
    <string name="set_informedit_toast">可以更改你允许应用的通知</string>
    <string name="set_weibo_toast">只展示一下微信，点击微信那栏</string>
    <string name="set_privacy_toast">设置下载的app是否允许访问你的通讯录位置等，不过在下面的每个你下的App里都可以分别设置</string>
    <string name="set_icloud_toast">很重要的一栏，注册了appleID最好登陆iCloud，打开查找我的iPhone选项，这样在手机丢了的情况下可以定位，锁定，和抹掉iphone信息。并免费拥有5G云空间，用来传传照片什么的</string>
    <string name="set_imgpart1_toast">iphone自带App的一些设置，种类太多了，就不演示了，我也从没用过</string>
    <string name="set_imgpart2_toast">iphone自带App的一些设置，种类太多了，就不演示了，我也从没用过</string>
    <string name="set_imgpart3_toast">各种常见的社交App，新浪微博和 腾讯微博可以在这里安装</string>
    <string name="set_imgpart4_toast">你下载的app会在这里，可以在这里单独更改他们允许使用的功能，例如，通知，定位等什么的，很好的措施</string>
    <string name="setgeneral_bo1_toast">显示电池，手机存储空间，以及iCloud的用量，和控制是否自动更新下载的app（默认打开）</string>
    <string name="setgeneral_bo2_toast">设置自动锁屏的时间以及可以给每个应用加独立的密码锁（不错的功能）</string>
    <string name="setgeneral_bo3_toast">和安卓设置一样，没什么好说的</string>
    <string name="setgeneral_bo4_toast">将itunes连接到电脑上。vpn,翻墙用的没设置过:( ）</string>
    <string name="setgeneral_bo5_toast">还原各种设置到初始状态</string>
    <string name="setgeneral_update_toast">查看你的ios版本，正常iPhone会发消息给你手机，问你更不更新，你选择更新就行了。实在没电的话，那下次就在这里更新。</string>
    <string name="setgeneral_assist_toast">调整你的iphon默认的视觉（动画效果，字体什么的），听觉（添加助听器，以及打开来电闪光灯提示，消除噪音），最有用的应该是AssistiveTouch(就是在桌面上多一个灰色悬浮按钮，可以用它来替代home键等任何按键，并可以截屏，防止按键按多了会损坏)</string>
    <string name="setgeneral_self_toast">会显示你手机的运营商，序列号，ios版本，存储空间用量以及各种其他信息</string>
    <string name="setgeneral_siri_toast">一种智能语言机器人，默认关闭，长按home键会打开，你可以问它各种问题，他都会回答你,娱乐用,没问过什么正经问题</string>
    <string name="setgeneral_spotlight_toast">搜索你手机中的程序，在这里设置可以搜到的东西（应该是在主菜单下拉出现的那个搜索栏能搜索到的东西）</string>
    <string name="setgeneral_handoff_toast">如果你有Mac，这是一个可以让iPhone和Mac互动的功能，Mac的在系统偏好设置－>通用中勾选允许handoff，必须用同一个appleid</string>
    <string name="main_dialog">iPhone的主界面,可以左右滑动,点击最上边和最下边会出现通知栏和控制中心(实际为滑动最上边和最下边,为了简便改为点击了)</string>
    <string name="appstore_dialog">iPhone下载应用的软件，类似安卓的豌豆荚，360什么的，这里只举一个例子，点击微信图标下载一个应用试试吧</string>
    <string name="calender_dialog">苹果自带的应用日历，可以在这里添加需要提醒的事件</string>
    <string name="camera_dialog">苹果自带的相机应用，苹果6后置摄像头800w像素(6s有1200w),前置120w(6s有500w),有6种拍摄模式，左右滑动下面的各个选项，看看有什么功能吧</string>
    <string name="gamecenter_dialog">需要用appleID登陆,可以添加iCloud通讯录和Facebook中的好友,国内很少有人用，看看就行了(无内容)</string>
    <string name="health_dialog">苹果关于你自身运动的记录将会在这里，当然你也可以从AppStore下载关于健康的应用，数据也可以同步在这里，这里只展示一下第一个选项(无内容)</string>
    <string name="ibook_dialog">手机同样是很好的学习工具，如果你想进一步了解如何使用你的iPhone，在这里可以查找iPhone使用手册(图片显示)</string>
    <string name="itunes_dialog">可能因为网络问题，我没打开过。(图片显示)</string>
    <string name="magzine_dialog">点击商店会进入到Appstore的报刊杂志类别，可以订购你喜欢的报刊杂志，具体获取原理和AppStore下载微信一样(图片显示)</string>
    <string name="map_dialog">和苹果合作的高德地图，很不错，比较清晰可以精确到1m左右，可以知道马路是左侧堵还是右侧堵</string>
    <string name="message_dialog">信息，删除或标记为已读按左上角编辑按钮，删除还可以直接向左滑，会出现删除按钮</string>
    <string name="note_dialog">备忘录，日记本一样的东西</string>
    <string name="passbook_dialog">可以添加你在大众点评，携程，豆瓣，美团等等的优惠券，电影票什么的，便于统一查看和管理(图片显示)</string>
    <string name="photo_dialog">相册，记录了你所拍的照片，视频，即使你删除了也会保留40天左右，6s由于像素提升到1200w，每张照片的大小也会到3M左右，16g的实用空间为12.5g</string>
    <string name="remind_dialog">提醒事项，怕忘记什么就在这添加吧(图片显示)</string>
    <string name="set_dialog">比较常用的是在这里更改是否允许所下载的App给你推送消息，以及打开 通用－>辅助功能－>AssisitiveTouch(桌面上会永久存在一个小窗口，可以替代所有按键的作用)，还有就是将显示模式调为放大（桌面图标和字体会放大一点）</string>
    <string name="share_dialog">包含了全球各个股市的应用，不过炒股的话最好下个专业的应用(图片显示)</string>
    <string name="time_dialog">在这里调整所在时区，以及闹钟，秒表，计时器</string>
    <string name="video_dialog">需要在iTunes Store下载视频，国内没什么用，可以下载个视频App（腾讯视频，乐视Tv，优酷都可以）</string>
    <string name="weather_dialog">这是iPhone自带App中感觉最好看的一款,由于比较复杂,只能截图给你们看下(具体背景是动态的),天气状况精确到小时,预报未来10天的天气,左右滑动试试吧</string>
    <string name="safari_dialog">苹果自带的浏览器，由于UC用习惯了,所以我用的UC,safari没怎么用过(图片显示)</string>
    <string name="music_dialog">苹果自带的音乐播放器,不过需要iTunes,我没登上去过,所以我在用的是酷狗音乐,你可以在AppStore中下载你喜欢的音乐播放器</string>
    <string name="mail_dialog">可以添加你喜欢的邮箱</string>
    <string name="control_air_toast">手机变为飞行模式</string>
    <string name="control_wifi_toast">开启和关闭wifi（需要提前在设置－>无线局域网－>连接wifi）</string>
    <string name="control_blue_toast">开启和关闭蓝牙（设置—>蓝牙）</string>
    <string name="control_disturb_toast">开启免打扰模式（设置—>勿扰模式）</string>
    <string name="control_lock_toast">使屏幕不受重力影响，一直是横屏或纵屏（常用）</string>
    <string name="control_bight_toast">调整屏幕亮度</string>
    <string name="control_music_toast">显示和控制当前播放的音频（一般用耳机的快捷键控制）</string>
    <string name="control_sound_toast">调整音量</string>
    <string name="control_airdrop_toast">苹果没用过的功能之一，可以让周围人或联系人发现你:)还是去摇微信吧</string>
    <string name="control_light_toast">快速打开手电筒（常用）</string>
    <string name="control_timer_toast">将会打开“时钟”app的计时器页面</string>
    <string name="control_calculate_toast">计算器页面（ios8的计算器23—11.5会等于0，ios9却不会：）</string>
    <string name="control_camera_toast">打开“照相机”App(锁屏时右下角直接有，控制中心在锁屏时也可以打开)</string>
    <string name="notification_segment_toast">可以切换至通知栏，类似安卓的通知栏</string>
    <string name="phone_call_toast">打电话界面</string>
    <string name="phone_recent_toast">最近通话记录，上限100条，比较少，主要因为同一个号码隔几天打就算一个新记录</string>
    <string name="phone_contact_toast">添加修改联系人</string>
    <string name="phone_collect_toast">点击右上角加号可以添加特殊的联系人进这里</string>
    <string name="help_next_toast">(向左滑动查看下一步)</string>
    <string name="help1_toast">    首先,将SIM卡插入手机,开机后出现如下界面,手指向右滑动解锁手机 </string>
</resources>