<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
      <android.support.v4.view.ViewPager
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:id="@+id/conduct_vp"
        />
      <LinearLayout 
          android:layout_width="match_parent"
          android:layout_height="78dp"
          android:background="#f4ffffff"
          android:id="@+id/ll_state"
          android:orientation="vertical"
          >
          
          
           <TextView 
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="#000000"
    android:textSize="15sp"
    android:gravity="center"
    android:id="@+id/tv_help"
    android:padding="3dp"
    android:text="@string/help1_toast"
     android:layout_weight="1" />
            <TextView 
                android:padding="2dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="#929292"
    android:textSize="12sp"
    android:gravity="center"
    android:text="@string/help_next_toast" 
  />
          <ImageView 
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:src="@drawable/swipeup"
              android:id="@+id/iv_swipeup"
              />
      </LinearLayout>
      
 <TextView
        android:id="@+id/start_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:background="@drawable/conduct_startcontent_tv"
        android:gravity="center"
        android:visibility="gone"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="@dimen/tv_iv_margin"
        android:text="@string/app_startcontent"
        android:textColor="#d1bed3"
        android:textSize="@dimen/text_size_day" />
      
</FrameLayout>

